samples/_failures_safe/1761336018_7079f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb1f81a0.c: In function ‘main’:
./samples/SAFE/__tmp_fb1f81a0.c:164:5: error: expected declaration or statement at end of input
  164 |     print_graph(&graph);
      |     ^~~~~~~~~~~
